--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy:branch": "node ./scripts/deploy-branch.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -45,4 +46,5 @@
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0"
   }
+  ,"license":"MIT"
 }
